--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,47 @@
+pytz
+mimetype
+typing
+python-secrets
+natsort
+gTTS
+waybackpy
+pycrypto
+aiofiles
+aioshutil
+anytree
+apscheduler
+aria2p
+asyncio
+cloudscraper
+dnspython
+feedparser
+flask
+gevent
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
+gunicorn
+httpx
+lxml
+motor
+natsort
+pillow
+psutil
+pycryptodome
+pymongo
+pyrofork==2.2.11
+python-dotenv
+python-magic
+qbittorrent-api
+requests
+telegraph
+tenacity
+tgcrypto
+urllib3
+uvloop
+xattr
+yt-dlp
+html_telegraph_poster
 aiohttp
 aiofiles
 aioshutil
@@ -17,7 +61,7 @@ google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
 gunicorn
-git+https://github.com/zevtyardt/lk21.git
+git+https://github.com/MAHESH-KADALI/lk21.git
 httpx
 langcodes[data]
 lxml
@@ -30,7 +74,7 @@ psutil
 pybase64
 pycountry
 pymongo
-pyrofork==2.2.11
+pyrofork
 python-dotenv
 python-magic
 qbittorrent-api
@@ -42,5 +86,4 @@ tgcrypto
 uvloop
 xattr
 yt-dlp
-pytz
-swibots
+heroku3
