--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,3 @@
-pytz
-mimetype
-typing
-python-secrets
-natsort
-gTTS
-waybackpy
-pycrypto
-aiofiles
-aioshutil
-anytree
-apscheduler
-aria2p
-asyncio
-cloudscraper
-dnspython
-feedparser
-flask
-gevent
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-gunicorn
-httpx
-lxml
-motor
-natsort
-pillow
-psutil
-pycryptodome
-pymongo
-pyrofork==2.2.11
-python-dotenv
-python-magic
-qbittorrent-api
-requests
-telegraph
-tenacity
-tgcrypto
-urllib3
-uvloop
-xattr
-yt-dlp
-html_telegraph_poster
 aiohttp
 aiofiles
 aioshutil
@@ -74,7 +30,7 @@ psutil
 pybase64
 pycountry
 pymongo
-pyrofork
+pyrofork==2.2.11
 python-dotenv
 python-magic
 qbittorrent-api
@@ -86,4 +42,5 @@ tgcrypto
 uvloop
 xattr
 yt-dlp
-heroku3
+pytz
+swibots
